refactor: sonar cloude issues